@@ -1403,72 +1403,3 @@ LP  (COND ((NULL X)
          (setq line-list (cons (subseq str bol eol) line-list)))
      (setq bol (+ eol 1)))
     (nreverse line-list)))
-
-; part of the old spad to new spad translator
-; these are here because they need to be in depsys
-; they were in nspadaux.lisp
-
-(defmacro wi (a b) b)
-
-(defmacro |try| (X)
-  `(LET ((|$autoLine|))
-        (declare (special |$autoLine|))
-        (|tryToFit| (|saveState|) ,X)))
-
-(defmacro |embrace| (X) `(|wrapBraces| (|saveC|) ,X (|restoreC|)))
-(defmacro |indentNB| (X) `(|wrapBraces| (|saveD|) ,X (|restoreD|)))
-
-(defmacro |tryBreak| (a b c d)
-; Try to format <a b> by:
-; (1) with no line breaking ($autoLine = nil)
-; (2) with possible line breaks within a;
-; (3) otherwise use a brace
-  `(LET
-    ((state))
-    (setq state (|saveState| 't))
-    (or
-      (LET ((|$autoLine|))
-         (declare (special |$autoLine|))
-         (and ,a (|formatRight| '|formatPreferPile| ,b ,c ,d)))
-      (|restoreState| state)
-      (and (eqcar ,b (quote seq))
-               (|embrace| (and
-                  ,a
-                  (|formatLB|)
-                  (|formatRight| '|formatPreferPile| ,b ,c ,d))))
-      (|restoreState| state)
-      (|embrace| (and ,a
-                  (|formatLB|)
-                  (|formatRight| '|formatPreferPile| ,b ,c ,d))))))
-
-(defmacro |tryBreakNB| (a b c d)
-; Try to format <a b> by:
-; (1) with no line breaking ($autoLine = nil)
-; (2) with possible line breaks within a;
-; (3) otherwise display without a brace
-  `(LET
-    ((state))
-    (setq state (|saveState| 't))
-    (or
-      (markhash ,b 0)
-      (LET ((|$autoLine|))
-         (declare (special |$autoLine|))
-         (and ,a (|formatRight| '|formatPreferPile| ,b ,c ,d)))
-      (|restoreState| state)
-      (markhash ,b 1)
-      (and (eqcar ,b (quote seq))
-               (|embrace| (and
-                  ,a
-                  (|formatLB|)
-                  (|formatRight| '|formatPreferPile| ,b ,c ,d))))
-      (markhash ,b 2)
-      (|restoreState| state)
-      (|indentNB| (and ,a
-                  (|formatRight| '|formatPreferPile| ,b ,c ,d)))
-      (markhash ,b 3)
-
-)))
-
-(defun markhash (key n) (progn (cond
-  ((equal n 3) (remhash key ht))
-  ('t (hput ht key n)) ) nil))
