@@ -69,11 +69,9 @@ o  there is some code at the end of SPECEVAL BOOT that puts "up"
    (|or| " or ")
    (TAG " -> ")
    (|+->| " +-> ")
-   (RARROW ": ")
    (SEGMENT "..")
    (in " in ")
    (|^=|  "^=")
-   (EL* ":")
    (JOIN " JOIN ")
    (EQUATNUM "  ")
    (IQUOTIENT "//")
