@@ -233,7 +233,6 @@
 (MAKEPROP 'EQUATNUM '|Nud| '(|dummy| |dummy| 0 0))
 (MAKEPROP 'EQUATNUM '|Led| '(|dummy| |dummy| 10000 0))
 (MAKEPROP 'LET '|Led| '(|:=| LET 125 124))
-(MAKEPROP 'RARROW '|Led| '(== DEF 122 121))
 (MAKEPROP 'SEGMENT '|Led| '(\.\. SEGMENT 401 699 (|boot-Seg|)))
 (MAKEPROP 'SEGMENT '|isSuffix| 'T)
 
