@@ -1,11 +1,19 @@
+2011-03-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/record.boot, src/interp/patches.lisp,
+	src/interp/property.lisp, src/interp/parse.boot,
+	src/interp/util.lisp, src/interp/i-output.boot,
+	src/interp/i-syscmd.boot, src/interp/i-spec2.boot,
+	src/interp/i-toplev.boot, src/interp/setq.lisp,
+	src/interp/daase.lisp, src/interp/macros.lisp,
+	src/interp/spad.lisp: Misc cleanups.
+	src/interp/nspadaux.lisp: Remove.
+
 2011-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/string.spad.pamphlet,
 	src/interp/scan.boot, src/interp/sys-pkg.lisp: Unicode fixes.
 	src/interp/vmlisp.lisp: Add NUM2USTR.
-
-
-
 
 2011-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
